// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Java Rendering > AdditionalProperties 1`] = `
[
  "AdditionalProperties.java",
]
`;

exports[`Java Rendering > Enum 1`] = `
[
  "Enum.java",
]
`;

exports[`Java Rendering > Test multiple inheritance (interfaces) 1`] = `
[
  "A.java",
  "Abs.java",
  "B.java",
  "C.java",
  "ErrorUnknown.java",
  "ErrorUnknownError.java",
  "GiveInGetOut2Request.java",
  "GiveInGetOut2RequestParams.java",
  "GiveInGetOut2Response.java",
  "GiveInGetOutRequest.java",
  "GiveInGetOutRequestParams.java",
  "GiveInGetOutResponse.java",
  "IB.java",
  "IC.java",
  "In.java",
  "JsonRpcError.java",
  "JsonRpcErrorResponse.java",
  "JsonRpcRequest.java",
  "JsonRpcRequestParams.java",
  "JsonRpcResponse.java",
  "Out.java",
  "Out2.java",
  "UnionOfAB.java",
]
`;

exports[`Java Rendering > Type compressions 1`] = `
[
  "A.java",
  "Abs.java",
  "B.java",
  "ErrorUnknown.java",
  "ErrorUnknownError.java",
  "GiveIn1GetOut1Request.java",
  "GiveIn1GetOut1RequestParams.java",
  "GiveIn1GetOut1Response.java",
  "GiveIn2GetOut2Request.java",
  "GiveIn2GetOut2RequestParams.java",
  "GiveIn2GetOut2Response.java",
  "In1.java",
  "In2.java",
  "JsonRpcError.java",
  "JsonRpcErrorResponse.java",
  "JsonRpcRequest.java",
  "JsonRpcRequestParams.java",
  "JsonRpcResponse.java",
]
`;

exports[`Java Rendering > description-inheritance 1`] = `
[
  "description-inheritance.java",
]
`;

exports[`Java Rendering > generic_params 1`] = `
[
  "AbstractRequestData.java",
  "DepositRequest.java",
  "DepositResponse.java",
  "ErrorUnknown.java",
  "ErrorUnknownError.java",
  "JsonRpcError.java",
  "JsonRpcErrorResponse.java",
  "JsonRpcRequest.java",
  "JsonRpcRequestParams.java",
  "JsonRpcResponse.java",
  "RefundRequest.java",
  "RefundResponse.java",
]
`;

exports[`Java Rendering > primitive-generics 1`] = `
[
  "ErrorUnknown.java",
  "ErrorUnknownError.java",
  "GiveIntGetDoubleRequest.java",
  "GiveIntGetDoubleRequestParams.java",
  "GiveIntGetDoubleResponse.java",
  "GiveNumberGetCharRequest.java",
  "GiveNumberGetCharRequestParams.java",
  "GiveNumberGetCharResponse.java",
  "GiveStringGetStringRequest.java",
  "GiveStringGetStringRequestParams.java",
  "GiveStringGetStringResponse.java",
  "JsonRpcError.java",
  "JsonRpcErrorResponse.java",
  "JsonRpcRequest.java",
  "JsonRpcRequestParams.java",
  "JsonRpcResponse.java",
]
`;

exports[`Java Rendering > primitive-generics 2`] = `
"package generated.omnigen;

import jakarta.annotation.Generated;

@Generated(value = "omnigen", date = "2000-01-02T03:04:05.000Z")
public class GiveNumberGetCharRequestParams extends JsonRpcRequestParams<Double> {
  public GiveNumberGetCharRequestParams(double param) {
    super(param);
  }
}
"
`;
